[package]
# The crate name `nl80211` is occupied
name = "wl-nl80211"
version = "0.4.0"
authors = ["Gris Ge <fge@redhat.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.77"
description = "Linux kernel wireless(802.11) netlink Library"
homepage = "https://github.com/rust-netlink/wl-nl80211"
repository = "https://github.com/rust-netlink/wl-nl80211"
keywords = ["network"]
categories = ["network-programming", "os"]
readme = "README.md"

[lib]
name = "wl_nl80211"
path = "src/lib.rs"
crate-type = ["lib"]

[features]
default = ["tokio_socket"]
tokio_socket = ["netlink-proto/tokio_socket", "tokio"]
smol_socket = ["netlink-proto/smol_socket", "async-std"]

[dependencies]
async-std = { version = "1.9.0", optional = true}
bitflags = "2"
futures = "0.3.17"
log = "0.4.14"
thiserror = "1.0.29"
tokio = { version = "1.0.1", features = ["rt"], optional = true}
genetlink = { default-features = false, version = "0.2.6" }
netlink-packet-core = { version = "0.8.0" }
netlink-packet-generic = { version = "0.4.0" }
netlink-proto = { default-features = false, version = "0.12.0" }
netlink-sys = { version = "0.8.4" }

[dev-dependencies]
env_logger = "0.9.0"
anyhow = "1.0.100"
hex = "0.4.3"

[dev-dependencies.tokio]
version = "1.11.0"
features = ["macros", "rt", "rt-multi-thread", "time", "net"]
